--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Crileiton Blog</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <title>crileiton Blog</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <section>
+        <div>
+          <a href="https://facebook.com/crileiton" target="_blank">Facebook</a>
+          <a href="https://twitter.com/crileiton" target="_blank">Twitter</a>
+          <a href="https://www.instagram.com/crileiton/" target="_blank"
+            >Instagram</a
+          >
+          <a href="https://www.linkedin.com/in/crileiton/" target="_blank"
+            >LinkedIn</a
+          >
+          <a
+            href="https://www.youtube.com/channel/UC9Wv1QfApcdI-A44lQR8f6Q?view_as=subscriber"
+            target="_blank"
+            >YouTube</a
+          >
+        </div>
+      </section>
+      <nav>
+        <section>
+          <a href="index.html">Logo</a>
+        </section>
+        <section>
+          <a href="perfil.html">Sobre mi</a>
+        </section>
+      </nav>
+    </header>
+  </body>
 </html>
