Estilos en el header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <section>
-        <div>
+      <section class="header-icons-container">
+        <div class="icons">
           <a href="https://facebook.com/crileiton" target="_blank">Facebook</a>
           <a href="https://twitter.com/crileiton" target="_blank">Twitter</a>
           <a href="https://www.instagram.com/crileiton/" target="_blank"
@@ -27,10 +27,10 @@
         </div>
       </section>
       <nav>
-        <section>
+        <section class="nav-logo-container">
           <a href="index.html">Logo</a>
         </section>
-        <section>
+        <section class="profile-link">
           <a href="perfil.html">Sobre mi</a>
         </section>
       </nav>
