--- a/index.html
+++ b/index.html
@@ -5,30 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/font/flaticon.css" />
     <title>crileiton Blog</title>
   </head>
   <body>
     <header>
       <section class="header-icons-container">
         <div class="icons">
-          <a href="https://facebook.com/crileiton" target="_blank">Facebook</a>
-          <a href="https://twitter.com/crileiton" target="_blank">Twitter</a>
+          <a href="https://facebook.com/crileiton" target="_blank"
+            ><span class="flaticon-001-facebook"></span
+          ></a>
+          <a href="https://twitter.com/crileiton" target="_blank"
+            ><span class="flaticon-002-twitter"></span
+          ></a>
           <a href="https://www.instagram.com/crileiton/" target="_blank"
-            >Instagram</a
-          >
+            ><span class="flaticon-011-instagram"></span
+          ></a>
           <a href="https://www.linkedin.com/in/crileiton/" target="_blank"
-            >LinkedIn</a
-          >
+            ><span class="flaticon-010-linkedin"></span
+          ></a>
           <a
             href="https://www.youtube.com/channel/UC9Wv1QfApcdI-A44lQR8f6Q?view_as=subscriber"
             target="_blank"
-            >YouTube</a
-          >
+            ><span class="flaticon-008-youtube"></span
+          ></a>
+          <a href="https://github.com/crileiton" target="_blank"
+            ><span
+              ><img
+                class="icono-github"
+                src="css/font/github.png"
+                alt="Icono github"/></span
+          ></a>
         </div>
       </section>
       <nav>
         <section class="nav-logo-container">
-          <a href="index.html">Logo</a>
+          <a href="index.html"><img src="" alt="Logo de crileiton blog"/></a>
         </section>
         <section class="profile-link">
           <a href="perfil.html">Sobre mi</a>
