--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
       </section>
       <nav>
         <section class="nav-logo-container">
-          <a href="index.html"><img src="" alt="Logo de crileiton blog"/></a>
+          <a href="index.html"
+            ><img src="assets/Logo-negro.png" alt="Logo de crileiton blog"
+          /></a>
         </section>
         <section class="profile-link">
           <a href="perfil.html">Sobre mi</a>
         </section>
       </nav>
     </header>
+    <main>
+      <div class="section-main">
+        <p>Conoce las novedades y <br />noticias del Mundo Tech</p>
+        <button class="section-main-button">Entra ya!</button>
+      </div>
+    </main>
   </body>
 </html>
