--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font/flaticon.css" />
+    <link rel="icon" type="image/png" href="assets/icono.png" />
     <title>crileiton Blog</title>
   </head>
   <body>
@@ -41,7 +42,7 @@
       <nav>
         <section class="nav-logo-container">
           <a href="index.html"
-            ><img src="assets/Logo-negro.png" alt="Logo de crileiton blog"
+            ><img src="assets/Logo-blanco.png" alt="Logo de crileiton blog"
           /></a>
         </section>
         <section class="profile-link">
@@ -49,10 +50,12 @@
         </section>
       </nav>
     </header>
-    <main>
+    <main class="home-main">
       <div class="section-main">
         <p>Conoce las novedades y <br />noticias del Mundo Tech</p>
-        <button class="section-main-button">Entra ya!</button>
+        <button class="section-main-button">
+          <a href="blogs.html" target="_blank">Entra ya!</a>
+        </button>
       </div>
     </main>
   </body>
