Estilos en blogs html

--- a/blogs.html
+++ b/blogs.html
@@ -58,11 +58,16 @@
           <div class="blogs-new-img-container">
             <img src="" alt="" />
           </div>
-        </div>
-        <div class="blogs-news-info-container">
-          <h2></h2>
-          <p></p>
-          <a href="" class="blogs-button"></a>
+          <div class="blogs-news-info-container">
+            <h2>Título del Blogpost</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              illo consequatur blanditiis! Deleniti, labore reiciendis ex iure
+              numquam adipisci, consequatur eaque, quibusdam aspernatur
+              praesentium at exercitationem non iste voluptate repellendus.
+            </p>
+            <a href="" class="blogs-button"></a>
+          </div>
         </div>
       </section>
       <section class="blogs-posts-container">
