--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="assets/icono.png" />
     <title>crileiton Blog</title>
   </head>
-  <body>
+  <body class="home-body">
     <header>
       <section class="header-icons-container">
         <div class="icons">
@@ -55,8 +55,8 @@
       <section class="blogs-news-container">
         <div class="blogs-main-new">
           <h3>Soy un título</h3>
-          <div class="blogs-new-img-container">
-            <img src="" alt="" />
+          <div class="blogs-news-img-container">
+            <img src="assets/portada.png" alt="Portada blog principal" />
           </div>
           <div class="blogs-news-info-container">
             <h2>Título del Blogpost</h2>
