Estilos del botón

--- a/blogs.html
+++ b/blogs.html
@@ -66,7 +66,7 @@
               numquam adipisci, consequatur eaque, quibusdam aspernatur
               praesentium at exercitationem non iste voluptate repellendus.
             </p>
-            <a href="" class="blogs-button"></a>
+            <a href="" class="blogs-button">Leer más</a>
           </div>
         </div>
       </section>
@@ -82,7 +82,7 @@
               beatae veritatis. Fugit maiores deserunt optio aspernatur facere
               obcaecati, totam similique.
             </p>
-            <a href="">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </article>
         </div>
         <div>
@@ -96,7 +96,7 @@
               beatae veritatis. Fugit maiores deserunt optio aspernatur facere
               obcaecati, totam similique.
             </p>
-            <a href="">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </article>
         </div>
         <div>
@@ -110,7 +110,7 @@
               beatae veritatis. Fugit maiores deserunt optio aspernatur facere
               obcaecati, totam similique.
             </p>
-            <a href="">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </article>
         </div>
         <div>
@@ -124,7 +124,7 @@
               beatae veritatis. Fugit maiores deserunt optio aspernatur facere
               obcaecati, totam similique.
             </p>
-            <a href="">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </article>
         </div>
         <div>
@@ -138,7 +138,7 @@
               beatae veritatis. Fugit maiores deserunt optio aspernatur facere
               obcaecati, totam similique.
             </p>
-            <a href="">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </article>
         </div>
         <div>
@@ -152,7 +152,7 @@
               beatae veritatis. Fugit maiores deserunt optio aspernatur facere
               obcaecati, totam similique.
             </p>
-            <a href="">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </article>
         </div>
       </section>
