sección de contacto

--- a/blog.html
+++ b/blog.html
@@ -139,19 +139,25 @@
         </div>
       </section>
       <section class="contact-main-container">
-        <div>
-          <img src="" alt="" />
-          <div class="contact-left">
-            <a href=""></a>
-            <p></p>
-          </div>
+        <div class="imagen-contacto-1">
+          <img src="assets/contacto1.png" alt="" />
         </div>
-        <div>
-          <img src="" alt="" />
-          <div class="contact-right">
-            <a href=""></a>
-            <p></p>
-          </div>
+        <div class="contact-left">
+          <a href="">Contacto</a>
+          <p class="parrafo-contacto-1">
+            Texto de intro. Lorem ipsum dolor sit amet, consectetuer adipiscing
+            elit
+          </p>
+        </div>
+        <div class="imagen-contacto-2">
+          <img src="assets/contacto2.png" alt="" />
+        </div>
+        <div class="contact-right">
+          <a href="">Escribe</a>
+          <p class="parrafo-contacto-2">
+            Texto de intro. Lorem ipsum dolor sit amet, consectetuer adipiscing
+            elit
+          </p>
         </div>
       </section>
     </main>
