--- a/blogs.html
+++ b/blogs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/blogs.css" />
     <link rel="stylesheet" href="css/font/flaticon.css" />
     <link rel="icon" type="image/png" href="assets/icono.png" />
+    <link rel="stylesheet" href="css/media-queries.css" />
     <title>crileiton Blog</title>
   </head>
   <body class="home-body">
@@ -54,19 +55,17 @@
     <main class="blogs-main">
       <section class="blogs-news-container">
         <div class="grid-container blogs-main-new">
-          <h3>Soy un título</h3>
+          <h3>Soy un titulo</h3>
           <div class="blogs-news-img-container">
-            <img src="assets/portada.png" alt="Portada blog principal" />
+            <img src="assets/portada.png" alt="" />
           </div>
           <div class="blogs-news-info-container">
-            <h2>Título del Blogpost</h2>
+            <h2>Título del blogpost</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-              illo consequatur blanditiis! Deleniti, labore reiciendis ex iure
-              numquam adipisci, consequatur eaque, quibusdam aspernatur
-              praesentium at exercitationem non iste voluptate repellendus.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam
+              vero veniam officiis? Error magnam numquam.
             </p>
-            <a href="blog.html" class="blogs-button">Leer más</a>
+            <a href="" class="blogs-button">Leer más</a>
           </div>
         </div>
       </section>
