--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font/flaticon.css" />
     <link rel="icon" type="image/png" href="assets/icono.png" />
+    <link rel="stylesheet" href="css/media-queries.css" />
     <title>crileiton Blog</title>
   </head>
   <body>
