--- a/perfil.html
+++ b/perfil.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/blogs.css" />
     <link rel="stylesheet" href="css/font/flaticon.css" />
     <link rel="icon" type="image/png" href="assets/icono.png" />
+    <link rel="stylesheet" href="css/media-queries.css" />
     <title>crileiton Blog</title>
   </head>
   <body class="home-body">
